// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvaluationOrderStatusPage should render view correctly on cancelled payment 1`] = `
<div
  className="public-evaluation-order-status-page MuiBox-root css-0"
>
  <div
    className="public-evaluation-order-status-page__heading"
  >
    <h1
      className="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
    >
      Maksu keskeytyi
    </h1>
    <div
      className="header-separator MuiBox-root css-0"
    />
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-3su884-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Voit yrittää maksua uudestaan. Käsittelemme vain maksetut tarkistusarviointipyynnöt.
    </p>
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium fit-content-max-width css-zcbmsk-MuiButtonBase-root-MuiButton-root"
      href="/yki/ilmoittautuminen"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      Takaisin aloitussivulle
      <span
        className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </a>
  </div>
</div>
`;

exports[`EvaluationOrderStatusPage should render view correctly on payment error 1`] = `
<div
  className="public-evaluation-order-status-page MuiBox-root css-0"
>
  <div
    className="public-evaluation-order-status-page__heading"
  >
    <h1
      className="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
    >
      Maksu epäonnistui
    </h1>
    <div
      className="header-separator MuiBox-root css-0"
    />
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-3su884-MuiPaper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Tarkistusarviointimaksun maksaminen ei onnistunut. Yritä maksua uudestaan.
    </p>
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium fit-content-max-width css-zcbmsk-MuiButtonBase-root-MuiButton-root"
      href="/yki/ilmoittautuminen"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      Takaisin aloitussivulle
    </a>
  </div>
</div>
`;

exports[`EvaluationOrderStatusPage should render view correctly on successful payment 1`] = `
<div
  className="public-evaluation-order-status-page MuiBox-root css-0"
>
  <div
    className="public-evaluation-order-status-page__heading"
  >
    <h1
      className="MuiTypography-root MuiTypography-h1 css-o2w69a-MuiTypography-root"
    >
      Olet pyytänyt tarkistusarviointia!
    </h1>
    <div
      className="header-separator MuiBox-root css-0"
    />
  </div>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 public-evaluation-order-status-page__paper rows gapped css-3su884-MuiPaper-root"
  >
    <div>
      <p
        className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Tutkinto
        :
         
        <b>
          suomi, keskitaso
        </b>
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Testipäivä
        :
         
        <b>
          10/11/2023
        </b>
      </p>
    </div>
    <p
      className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
    >
      Sinulle on lähetetty vahvistus tarkistusarviointipyynnöstäsi sähköpostilla. Sähköpostissa on myös kuitti tarkistusarviointimaksustasi. Jos et ole saanut viestiä, tarkista roskapostikansiosi.
    </p>
    <a
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium fit-content-max-width css-zcbmsk-MuiButtonBase-root-MuiButton-root"
      href="/yki/ilmoittautuminen"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
    >
      Takaisin aloitussivulle
    </a>
  </div>
</div>
`;
